tests/compile-fail/cases/tainted_into_command_arg.stderr
error[E0277]: the trait bound `Tainted<Vec<u8>>: AsRef<OsStr>` is not satisfied
 --> cases/tainted_into_command_arg.rs:6:35
  |
6 |     Command::new("/bin/echo").arg(t);
  |                               --- ^ the trait `AsRef<OsStr>` is not implemented for `Tainted<Vec<u8>>`
  |                               |
  |                               required by a bound introduced by this call
  |
note: required by a bound in `Command::arg`
 --> $RUST/std/src/process.rs
